# anki_chinese_poem_cards_generator

./: Cargo.toml  README.MD
.github/workflows/: release.yml
src/: main.rs
